--- a/home-project/production-workflow/Base.Resources/Common.en.resx
+++ b/home-project/production-workflow/Base.Resources/Common.en.resx
@@ -20,4 +20,7 @@
     <data name="Order" xml:space="preserve">
         <value>Order</value>
     </data>
+    <data name="AppUser" xml:space="preserve">
+        <value>User</value>
+    </data>
 </root>
